# claw-code

./: README.md
.github/workflows/: binstall-release.yml
lyco_code/: Cargo.toml  README.md
lyco_code/.github/workflows/: publish.yml
lyco_code/src/: lib.rs  main.rs
publish/: Cargo.toml
publish/src/: main.rs
